# TensorRT-YOLOv8-ByteTrack

./: CMakeLists.txt  main.cpp
tensorrtx-yolov8/: CMakeLists.txt
tensorrtx-yolov8/include/: utils.h
yolo/: main.cpp
yolo/include/: public.h  utils.h  yolov8_lib.h
yolo/src/: yolov8_lib.cpp
